Fix very long words overflowing in descriptions on board

--- a/assets/stylesheets/scrum2b.css
+++ b/assets/stylesheets/scrum2b.css
@@ -353,3 +353,16 @@ img.icon{
   height: auto;
 }
 
+.div_description {
+  -ms-word-break: break-all;
+       word-break: break-all;
+
+       /* Non standard for webkit */
+       word-break: break-word;
+
+  -webkit-hyphens: auto;
+     -moz-hyphens: auto;
+          hyphens: auto;
+}
+
+
